force-app/main/default/objects/SuRF_Opportunity__c/SuRF_Opportunity__c.object-meta.xml
<CustomObject>
    <description>NPN : Partner Community : NPN Compliance :</description>
    <label>SuRF-Opportunity</label>
    <nameField>
        <displayFormat>SuRF-OPP-{00000}</displayFormat>
        <label>SuRF-Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuRF-Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>