force-app/main/default/objects/SuRF_Opportunity__c/fields/POS_Amount__c.field-meta.xml
<CustomField>
    <fullName>POS_Amount__c</fullName>
    <label>POS Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>