force-app/main/default/objects/SuRF_Opportunity__c/fields/POS_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>POS_Unit_Price__c</fullName>
    <label>POS Unit Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>